# lestallum-mc-bot

./: .gitignore  Cargo.toml
src/: app_config.rs  app_state.rs  handle_event.rs  logging.rs  main.rs  mojang.rs
src/api/: claims.rs  mod.rs
src/api/handler/: bot.rs  hello.rs  login.rs
src/api/middleware/: auth.rs
src/bot/: activity.rs  bot_controller.rs  bot_state.rs  handle_event.rs  mod.rs
src/bot/events/: chat.rs  death.rs  mod.rs  packet.rs  spawn.rs
src/events/: chat.rs  death.rs  packet.rs  spawn.rs
