[package]
name = "lestallum-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea/"}
azalea-auth = { git = "https://github.com/azalea-rs/azalea/"}
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0"
config = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "multipart",
] }